NAV BAR COM LINKS E BARRA

--- a/pages/blank.html
+++ b/pages/blank.html
@@ -82,6 +82,9 @@
                             <a href="index.html"><i class="fa fa-home fa-fw"></i> Home</a>                            
                         </li>
                         <li>
+                            <a href="index.html"><i class="fa fa-home fa-fw"></i> Triagem</a>                            
+                        </li>
+                        <li>
                             <a href="consulta.html"><i class="fa fa-user-md fa-fw"></i> Consultas</a>
                         </li>
                         <li>
